Automatically download tensorrt plugin library

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       - ./models-docker:/app/models
       - ./outputs:/app/outputs
       - ./venv:/app/venv
+    environment:
+      - COMMANDLINE_ARGS=""
+      - UVICORN_ARGS="--host 0.0.0.0"
     deploy:
       resources:
         reservations:
