--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
 /.git
+/docker-data
 /models
-/models-docker
 /outputs
 /venv
 /dist
-*/__pycache__*
-*/node_modules*
+**/__pycache__
+**/node_modules
 
 /lib/trt/lib/*
