--- a/docker/Dockerfile.lite
+++ b/docker/Dockerfile.lite
@@ -1,30 +1,34 @@
-FROM node:18.14.0-alpine3.17 as frontend
-
-RUN apk update && apk add git && npm i -g pnpm
-
-COPY . /Lsmith
-
-WORKDIR /Lsmith/frontend
-
-RUN pnpm i && pnpm build
-
-
 FROM nvidia/cuda:11.8.0-runtime-ubuntu20.04 as main
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt update && apt upgrade -y \
+RUN apt update \
     && apt install software-properties-common -y \
-    && add-apt-repository --yes ppa:deadsnakes/ppa
+    && add-apt-repository ppa:deadsnakes/ppa -y \
+    && apt install curl -y
 
-RUN apt update && apt install curl python3.10 python3.10-venv git-core tensorrt=8.5.3.1-1+cuda11.8 -y
+RUN apt install tensorrt=8.5.3.1-1+cuda11.8 -y
 
-RUN curl https://bootstrap.pypa.io/get-pip.py | python3.10
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash
+
+RUN apt install nodejs -y
+
+RUN curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh \
+    && chmod +x Miniconda3-latest-Linux-x86_64.sh \
+    && bash ./Miniconda3-latest-Linux-x86_64.sh -b -f -p /opt/conda \
+    && rm Miniconda3-latest-Linux-x86_64.sh \
+    && /opt/conda/bin/conda init bash
+
+RUN npm i -g pnpm
+
+RUN cd  /usr/local/cuda-11.8/targets/x86_64-linux/lib/ \
+    && ln -s libcublas.so.11 libcublas.so.12 \
+    && ln -s libcublasLt.so.11 libcublasLt.so.12
+
+ENV LD_LIBRARY_PATH /usr/local/cuda-11.8/targets/x86_64-linux/lib:$LD_LIBRARY_PATH
 
 COPY . /app
 
 WORKDIR /app
 
-COPY --from=frontend /Lsmith/frontend/dist /app/dist
-
-ENTRYPOINT [ "/usr/bin/python3.10", "-u", "/app/launch.py" ]
+ENTRYPOINT [ "/opt/conda/bin/python", "-u", "/app/launch.py" ]
