fix engine builder

--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "node ./scripts/build.mjs",
-    "dev": "NODE_ENV='development' pnpm build --watch --run",
-    "preview": "vite preview",
+    "build": "node ./scripts/build.js",
+    "dev": "cross-env NODE_ENV='development' pnpm build --watch",
     "openapi-gen-client": "openapi-generator-cli generate -i http://127.0.0.1:8000/openapi.json -g typescript-fetch -o ./modules/api -c ./spec-config.json",
     "eslint": "eslint src/**/*.{ts,tsx}",
     "prettier": "prettier src/**/*.{ts,tsx}",
@@ -37,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.7",
     "eslint": "^8.33.0",
