--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "cross-env": "^7.0.3",
+    "csstype": "^3.1.1",
     "dotenv": "^16.0.3",
     "esbuild": "^0.17.7",
     "typescript": "^4.9.3"
