add Field required author and url
Signed-off-by: ふぁ <yuki@yuki0311.com>

--- a/plugins/autocomplete/plugin.toml
+++ b/plugins/autocomplete/plugin.toml
@@ -2,3 +2,5 @@ main = "main"
 name = "autocomplete"
 version = "1.0.0"
 javascript = "main"
+author = "ddPn08"
+url = "https://github.com/ddPn08/Radiata"
